eume을 사용하여 순위 결정 기능 구현